@@ -70,7 +70,7 @@ public class NoLineBreakQuotedColumn extends AbstractColumn {
 			mv.visitVarInsn(ALOAD, currentArrayIndex);
 			mv.visitVarInsn(ILOAD, currentOffsetIndex);
 			mv.visitInsn(CALOAD);
-			mv.visitLdcInsn(new Integer(quoteCharacter));
+			mv.visitLdcInsn(Integer.valueOf(quoteCharacter));
 			mv.visitJumpInsn(IF_ICMPNE, l27);
 			
 			mv.visitVarInsn(ALOAD, currentArrayIndex);
@@ -78,7 +78,7 @@ public class NoLineBreakQuotedColumn extends AbstractColumn {
 			mv.visitInsn(ICONST_1);
 			mv.visitInsn(IADD);
 			mv.visitInsn(CALOAD);
-			mv.visitLdcInsn(new Integer(quoteCharacter));
+			mv.visitLdcInsn(Integer.valueOf(quoteCharacter));
 			Label l29 = new Label();
 			mv.visitJumpInsn(IF_ICMPNE, l29);
 			
@@ -128,7 +128,7 @@ public class NoLineBreakQuotedColumn extends AbstractColumn {
 			mv.visitVarInsn(ALOAD, currentArrayIndex);
 			mv.visitVarInsn(ILOAD, currentOffsetIndex);
 			mv.visitInsn(CALOAD);
-			mv.visitLdcInsn(new Integer(escapeCharacter));
+			mv.visitLdcInsn(Integer.valueOf(escapeCharacter));
 			Label l31 = new Label();
 			mv.visitJumpInsn(IF_ICMPNE, l31);
 			mv.visitVarInsn(ALOAD, currentArrayIndex);
@@ -149,7 +149,7 @@ public class NoLineBreakQuotedColumn extends AbstractColumn {
 			mv.visitVarInsn(ALOAD, currentArrayIndex);
 			mv.visitVarInsn(ILOAD, currentOffsetIndex);
 			mv.visitInsn(CALOAD);
-			mv.visitLdcInsn(new Integer(quoteCharacter));
+			mv.visitLdcInsn(Integer.valueOf(quoteCharacter));
 			mv.visitJumpInsn(IF_ICMPNE, l36);
 			mv.visitVarInsn(ILOAD, currentOffsetIndex);
 			mv.visitVarInsn(ILOAD, startIndex);
