@@ -1,7 +1,6 @@
 package com.github.skjolber.stcsv;
 
 import static org.objectweb.asm.Opcodes.ALOAD;
-import static org.objectweb.asm.Opcodes.BIPUSH;
 import static org.objectweb.asm.Opcodes.GETSTATIC;
 import static org.objectweb.asm.Opcodes.ILOAD;
 import static org.objectweb.asm.Opcodes.INVOKESTATIC;
@@ -9,11 +8,8 @@ import static org.objectweb.asm.Opcodes.ISTORE;
 
 import org.objectweb.asm.MethodVisitor;
 
-import com.github.skjolber.stcsv.AbstractColumn;
-import com.github.skjolber.stcsv.CsvMapper;
 import com.github.skjolber.stcsv.column.bi.CsvColumnValueConsumer;
 import com.github.skjolber.stcsv.projection.BiConsumerProjection;
-import com.github.skjolber.stcsv.CsvException;
 
 public class ClassicPlainFixedColumn extends AbstractColumn {
 
@@ -139,10 +135,10 @@ public class ClassicPlainFixedColumn extends AbstractColumn {
 
 		mv.visitVarInsn(ALOAD, currentArrayIndex);
 		mv.visitVarInsn(ILOAD, currentOffsetIndex);
-		mv.visitLdcInsn(new Integer(fixedSize));
+		mv.visitLdcInsn(Integer.valueOf(fixedSize));
 		mv.visitFieldInsn(GETSTATIC, subClassInternalName, "v" + index, "L" + biConsumerProjection.getBiConsumerInternalName() + ";");
 		mv.visitVarInsn(ALOAD, objectIndex);
-		mv.visitLdcInsn(new Integer(parent.getDivider()));
+		mv.visitLdcInsn(Integer.valueOf(parent.getDivider()));
 		mv.visitMethodInsn(INVOKESTATIC, "com/github/skjolber/csv/scan/PlainFixedColumn$Middle", optional ? "orSkip" : "orException", "([CIIL" + BiConsumerProjection.biConsumerName + ";Ljava/lang/Object;C)I", false);
 		mv.visitVarInsn(ISTORE, currentOffsetIndex);
 	}
@@ -157,7 +153,7 @@ public class ClassicPlainFixedColumn extends AbstractColumn {
 	
 		mv.visitVarInsn(ALOAD, currentArrayIndex);
 		mv.visitVarInsn(ILOAD, currentOffsetIndex);
-		mv.visitLdcInsn(new Integer(fixedSize));
+		mv.visitLdcInsn(Integer.valueOf(fixedSize));
 		mv.visitFieldInsn(GETSTATIC, subClassInternalName, "v" + index, "L" + biConsumerProjection.getBiConsumerInternalName() + ";");
 		mv.visitVarInsn(ALOAD, objectIndex);
 		mv.visitMethodInsn(INVOKESTATIC, "com/github/skjolber/csv/scan/PlainFixedColumn$Last$" + newLineType, optional ? "orSkip" : "orException", "([CIIL" + BiConsumerProjection.biConsumerName + ";Ljava/lang/Object;)I", false);
