@@ -1,7 +1,6 @@
 package com.github.skjolber.stcsv;
 
 import static org.objectweb.asm.Opcodes.ALOAD;
-import static org.objectweb.asm.Opcodes.BIPUSH;
 import static org.objectweb.asm.Opcodes.GETSTATIC;
 import static org.objectweb.asm.Opcodes.GOTO;
 import static org.objectweb.asm.Opcodes.ILOAD;
@@ -175,10 +174,10 @@ public class ClassicQuotedFixedColumn extends AbstractColumn {
 		
 		mv.visitVarInsn(ALOAD, currentArrayIndex);
 		mv.visitVarInsn(ILOAD, currentOffsetIndex);
-		mv.visitLdcInsn(new Integer(fixedSize));
+		mv.visitLdcInsn(Integer.valueOf(fixedSize));
 		mv.visitFieldInsn(GETSTATIC, subClassInternalName, "v" + index, "L" + biConsumerProjection.getBiConsumerInternalName() + ";");
 		mv.visitVarInsn(ALOAD, objectIndex);
-		mv.visitLdcInsn(new Integer(parent.getDivider()));
+		mv.visitLdcInsn(Integer.valueOf(parent.getDivider()));
 		mv.visitMethodInsn(INVOKESTATIC, "com/github/skjolber/csv/scan/QuotedFixedColumn$Middle", optional ? "orSkip" : "orException", "([CIIL" + BiConsumerProjection.biConsumerName + ";Ljava/lang/Object;C)I", false);
 		mv.visitVarInsn(ISTORE, currentOffsetIndex);	
 	}
@@ -194,7 +193,7 @@ public class ClassicQuotedFixedColumn extends AbstractColumn {
 
 		mv.visitVarInsn(ALOAD, currentArrayIndex);
 		mv.visitVarInsn(ILOAD, currentOffsetIndex);
-		mv.visitLdcInsn(new Integer(fixedSize));
+		mv.visitLdcInsn(Integer.valueOf(fixedSize));
 		mv.visitFieldInsn(GETSTATIC, subClassInternalName, "v" + index, "L" + biConsumerProjection.getBiConsumerInternalName() + ";");
 		mv.visitVarInsn(ALOAD, objectIndex);
 		mv.visitMethodInsn(INVOKESTATIC, "com/github/skjolber/csv/scan/QuotedFixedColumn$Last$" + newLineType, optional ? "orSkip" : "orException", "([CIIL" + BiConsumerProjection.biConsumerName + ";Ljava/lang/Object;)I", false);
